- [M] arch/x86/kernel/Makefile			 >  into generated directory.


Thu Feb  4 09:56:32 CST 2016
- [M] include/asm-generic/ptrace.h
- [M] arch/x86/include/asm/ptrace.h


Fri Feb  5 10:15:40 CST 2016
- [M] arch/x86/entry/entry_32.S


Tue Feb 16 09:51:28 CST 2016
- [+] arch/x86/kernel/dumpstack.c
- [+] arch/x86/kernel/process.c
- [M] arch/x86/entry/entry_32.S
- [M] arch/x86/kernel/traps.h			[D] do_trap functions


Wed Feb 17 09:19:12 CST 2016
- [+] arch/x86/kernel/process_32.c		[D] show registers ...
- [+] arch/x86/kernel/process_64.c
- [+] arch/x86/include/asm/kdebug.h
- [+] include/asm/kdebug.h
- [M] arch/x86/include/asm/ptrace.h
- [M] arch/x86/include/process.c
- [M] include/sandix/sched.h			[D] extern trap_init() here...


Thu Feb 18 09:40:21 CST 2016
- [+] arch/x86/Kconfig.cpu			[D] hmm.....
- [+] include/sandix/cache.h			[D] cacheline_aligned
- [+] arch/x86/include/asm/cache.h
- [+] arch/x86/entry/common.c			[D] SYSCALL entry
- [+] include/sandix/bitmaps.h
- [M] include/sandix/types.h			[D] bitmaps
- [M] include/sandix/bitops.h
- [M] arch/x86/include/asm/bitops.h
- [M] include/sandix/kernel.h			[D] roundup things
- [M] arch/x86/entry/entry_32.S


Fri Feb 19 12:38:05 CST 2016
- [+] arch/x86/include/asm/thread_info.h
- [+] include/sandix/thread_info.h		[D] struct thread_info
- [+] arch/Kconfig
- [+] include/sandix/percpu.h
- [+] arch/x86/include/asm/percpu.h		[D] PER_CPU things.. empty
- [+] include/asm-generic/irq.h
- [+] include/asm-generic/irqflags.h
- [M] arch/x86/include/asm/irqflags.h
- [M] include/sandix/irqflags.h			[D] local_irq_XXX APIs


Sun Feb 21 09:34:09 CST 2016
- [+] init/init_task.c
- [+] Diary/02-21-2016				[D] ISCA 1973 paper, accelerator
- [+] include/asm-generic/current.h
- [M] include/sandix/compiler.h			[D] new label: __init_task_data
- [M] arch/x86/kernel/vmSandix.ld.S		[D] handle .data.init_task
- [M] arch/x86/include/asm/current.h		[D] using esp to obtain task
- [M] arch/x86/include/asm/thread_info.h